# flappyowl

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
engine/: CMakeLists.txt  engine.hpp
engine/audio/: audio_bus.hpp  audio_defs.hpp  audio_engine.hpp  audio_playback.hpp
engine/components/: audio_listener_2d.cpp  audio_listener_2d.hpp  audio_source_2d.cpp  audio_source_2d.hpp  camera_2d.cpp  camera_2d.hpp  canvas_item.cpp  canvas_item.hpp  canvas_layer.cpp  canvas_layer.hpp  canvas_text.cpp  canvas_text.hpp  particles_2d.cpp  particles_2d.hpp  register_classes_components.cpp  register_classes_components.hpp  script_component.cpp  script_component.hpp  spatial_2d.cpp  spatial_2d.hpp  sprite_instance.cpp  sprite_instance.hpp  tag.cpp  tag.hpp
engine/core/: async.hpp  callback_queue.cpp  callback_queue.hpp  class.cpp  class.hpp  cmd_line.cpp  cmd_line.hpp  crc32.cpp  crc32.hpp  data.cpp  data.hpp  engine.cpp  engine.hpp  fast_map.hpp  fast_set.hpp  fast_vector.hpp  layer.hpp  log.cpp  log.hpp  mask.hpp  object.cpp  object.hpp  random.cpp  random.hpp  ref.cpp  ref.hpp  string_id.cpp  string_id.hpp  string_utf.cpp  string_utf.hpp  string_utils.cpp  string_utils.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp  timer.cpp  timer.hpp  var.cpp  var.hpp
engine/io/: yaml.cpp  (+9 more)
game/: CMakeLists.txt  main.cpp
game/config/: engine.cfg
game/resources/effects/: feathers.res  sparks.res
game/resources/scenes/: main.scene.yml
game/resources/scripts/: background.lua  game.lua  obstacles.lua
scripts/: shader_converter.py
(+251 files in other folders)
